# pmOS

./: .bochsrc  .clang-format  .clocignore  .gitignore  .gitmodules  Jinxfile  LICENSE  Makefile  README.md  bochs.ymp  bx_enh_dbg.ini  gdb.txt
bootstrapd/: .gitignore  CMakeLists.txt  Makefile  acpi.c.ignore  args.c  args.h  fs.c  fs.h  io.c  io.h  main.c  named_ports.c  named_ports.h  task_list.h
bootstrapd/init/: init.h
bootstrapd/src/: args.c  fs.c  io.c  io.h  main.c  pmbus.c
bootstrapd/src/elf/: auxvec.c  loader.c  loader.h
bootstrapd/src/init/: init.c  init.h  parser.c
kernel/: .gitignore  CMakeLists.txt  Makefile  asm.S  asm.hh  exceptions.hh  exceptions_managers.cc  exceptions_managers.hh  free_page_alloc.cc  free_page_alloc.hh  gdt.cc  gdt.hh  idle.cc  idle.hh  interrupts.cc  interrupts.hh  interrupts_asm.S  linker.hh  linker.ld  loadGDT.S  main.cc  malloc.cc  malloc.hh  mem.cc  mem.hh  messaging.cc  messaging.hh  misc.cc  misc.hh  pagefault_manager.cc  pagefault_manager.hh  paging.cc  paging.hh  palloc.cc  palloc.hh  sched.cc  sched.hh  start.S  start.cc  start.hh  (+9 more)
kernel/arch/: arch.cmake
kernel/arch/i686/: cpus.cc  entry.S  flags.cmake  kmain.S  kmain.cc  linker.ld  multiboot2.S  registers.cc  registers.hh  smp_vec.S  syscall.cc  utils.cc  weirdness.cc  x86_asm.hh
kernel/arch/loongarch64/: csr.hh  flags.cmake  floating_point.cc  fp.S  interrupts.cc  interrupts.hh  iocsr.hh  isr.S  linker.ld  loongarch_asm.hh  loongarch_defs.hh  pic.cc  registers.hh  scheduling.cc  spinlock.cc  start.S  tasks.cc  timer.cc  user_access.S
kernel/arch/riscv64/: arch.S  arch_specific.cc  console.cc  flags.cmake  isr.S  linker.ld  registers.cc  registers.hh  scheduling.cc  scheduling.hh  spinlock.cc  spinlock_asm.S  start.S  user_access.S
kernel/arch/x86/: cpus.cc  multiboot2.S  spinlock.cc  syscall.hh  user_access.cc  utils.cc  x86_asm.hh  x86_utils.hh
kernel/arch/x86_64/: entry.S  flags.cmake  fred.S  linker.ld  multiboot2.S  registers.hh  spinlock.cc  start.S  start.hh  syscalls.cc  user_access.S  utils.cc  wakeup_vec.S  x86_asm.S  x86_asm.hh  x86_utils.hh
kernel/common/: com.h  elf.h  errors.h  gdt.h  memory.h  syscalls.h  types.h
kernel/cpus/: cpu_init.cc  cpu_init.hh  cpus.cc  cpus.hh  ipi.cc  ipi.hh  ipi_asm.S  sse.hh
kernel/generic/: clock.cc  clock.hh  exceptions.hh  linker.hh  misc.cc  misc.hh  types.hh  uacpi_kernel_api.cc  utils.cc  utils.hh
kernel/generic/acpi/: acpi.cc  acpi.hh
kernel/generic/dtb/: dtb.cc  dtb.hh
kernel/generic/init/: common.cc  common.hh  kernel_pages.cc  kernel_pages.hh  limine.cc  multiboot.cc  ultra_main.cc
kernel/generic/interrupts/: interrupt_handler.cc  interrupt_handler.hh  stack.cc  stack.hh
kernel/generic/kern_logger/: kern_logger.cc  kern_logger.hh
kernel/generic/limine/: limine.cc  limine.cfg  limine.h
kernel/generic/memory/: bsearch.hh  dlmalloc.c  intrusive_bst.hh  intrusive_list.hh  malloc.cc  malloc.hh  mem.cc  mem.hh  paging.cc  (+20 more)
kernel/include/: assert.h  dlfcn.h  gdt.hh  inttypes.h  kernel  pthread.h  stdio.h  stdlib.h  string.h
kernel/interrupts/: apic.cc  apic.hh  asm_helpers.S  asm_macros.S  exceptions_managers.cc  exceptions_managers.hh  exceptions_managers_asm.S  gdt.cc  gdt.hh  idt.cc  idt.hh  interrupts.cc  interrupts.hh  interrupts_asm.S  ioapic.cc  ioapic.hh  loadGDT.S  pic.hh  pit.cc  pit.hh  programmable_ints.cc  programmable_ints.hh  programmable_ints_functs.hh  stack.hh
kernel/kern_logger/: kern_logger.cc  kern_logger.hh
kernel/lib/: array.hh  circ_array.hh  cstddef.hh  functional.hh  initializer_list  list.hh  memory.hh  new.hh  pair.hh  queue.hh  set.hh  splay_tree_map.hh  stack.hh  string.hh  type_traits.hh  utility.hh  vector.cc  vector.hh
kernel/libunwind/: CMakeLists.txt
kernel/limine/: limine.cc  limine.cfg
kernel/memory/: free_page_alloc.cc  free_page_alloc.hh  malloc.cc  malloc.hh  mem.cc  mem.hh  mem_object.cc  mem_object.hh  mem_regions.cc  mem_regions.hh  page_descriptor.cc  page_descriptor.hh  paging.cc  paging.hh  palloc.cc  palloc.hh  shared.hh  shared_mem.cc  shared_mem.hh  shared_object.hh  temp_mapper.cc  temp_mapper.hh  virtmem.cc  virtmem.hh
kernel/messaging/: messaging.cc  messaging.hh  named_ports.cc  named_ports.hh
kernel/minidbg/: Makefile  README.md  dbg.c
kernel/objects/: crti.h  exceptions.hh  icxxabi.cc  ubsan.hh
kernel/processes/: idle.cc  idle.hh  sched.cc  sched.hh  sched_pqueue.cc  syscalls.cc  syscalls.hh  syscalls_asm.S  task_group.cc  task_group.hh  task_switching.cc  task_switching.hh  tasks.cc  tasks.hh
kernel/sched/: defs.hh  sched.cc  sched.hh  sched_queue.cc  task_switching.cc  task_switching.hh  timers.hh
kernel/smoldtb/: CMakeLists.txt  Makefile  smoldtb.h
lib/: .gitignore  CMakeLists.txt  Makefile
lib/include/: internal_param.h  stdlib.h  string.h  system.h
lib/libc/: CMakeLists.txt  Makefile
lib/libm/: CMakeLists.txt  Makefile
lib/libpthread/: CMakeLists.txt  Makefile
lib/librt/: CMakeLists.txt
lib/src/: args_parser.c  crt0.S  crti.S  crtn.S  ctype.c  errno.c  malloc.c  pmos_debug.c  pmos_helpters.c  stdio.c  stdlib.c  stdlib_helpers.c  string.c  syscalls.c  syscalls_asm.S  system.c  tls.c
libs/lib/: .gitignore  CMakeLists.txt
libs/pmoscxx/: CMakeLists.txt
loader/: .gitignore  CMakeLists.txt  Makefile  acpi.c  args.c  cpu_init.S  entry.S  fs.c  gdt.c  gdt_asm.S  io.c  kernel_loader.c  linker.ld  load_elf.c  main.c  mem.c  memalloc.c  misc.S  paging.c  pmOSboot.cfg  screen.c  syscall.h  syscalls.S  uefi.c  utils.c
loader/include/: acpi.h  asm.h  elf.h  entry.h  fs.h  gdt.h  io.h  kernel_loader.h  linker.h  load_elf.h  main.h  mem.h  misc.h  paging.h  screen.h  syscall.h  task_list.h  uefi.h  unicode.h  utils.h
loader/linker/: riscv64.ld  x86_64.ld
loader/src/: load_elf.c  main.c  mem.c  uefi.c  utils.c
userspace/blockd/: CMakeLists.txt  blockd.yaml
userspace/devicesd/: .clang-format-ignore  CMakeLists.txt  devicesd.yaml
userspace/ext4/: Cargo.toml  ext4.yaml  vfsd.yaml
userspace/terminald/: CMakeLists.txt  Makefile  terminald.yaml
userspace/tests/: CMakeLists.txt  test_file.txt  tests.yaml
(+1238 files in other folders)
